--- a/index.html
+++ b/index.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bridge Rating Experiment Exp4</title>
-
-    <!-- Include jsPsych core library and necessary plugins -->
-    <script src="https://unpkg.com/jspsych@7.3.2/jspsych.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-html-button-response.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-preload.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-external-html.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-survey.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-image-button-response.js"></script>
-    <script src="https://unpkg.com/jspsych@7.3.2/plugins/jspsych-survey-text.js"></script>
-
-    <!-- Link to your custom experiment JS file -->
-    <script type="module" src="src/experiment_main_exp4.js"></script>
-</head>
-<body>
-    <h1>Bridge Rating Experiment Exp4</h1>
-    <p>Loading the experiment, please wait...</p>
-
-    <script type="module">
-        // Call the 'run' function from your 'experiment_main_exp4.js' file to start the experiment
-        import { run } from './src/experiment_main_exp4.js';
-        run({});
-    </script>
-</body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>bridge_rating_experiment_4</title><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="js/app.js"></script><link href="css/main.css" rel="stylesheet"></head><body></body></html>
